--- a/app/views/front/index.html
+++ b/app/views/front/index.html
@@ -8,10 +8,18 @@
 </div>
 <div class="row">
     <div class="col-sm-6 text-center">
-        <a href="/users" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Users <i class="fas fa-user"></i></a>
+        <div class="card">
+            <div class="card-body">
+                <a href="/users" class="btn btn-info btn-lg active" role="button" aria-pressed="true">Users <i class="fas fa-user"></i></a>
+            </div>
+        </div>
     </div>
     <div class="col-sm-6 text-center">
-        <a href="/plans" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Plans <i class="fas fa-file-alt"></i></a>
+        <div class="card">
+            <div class="card-body">
+                <a href="/plans" class="btn btn-info btn-lg active" role="button" aria-pressed="true">Plans <i class="fas fa-file-alt"></i></a>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
