--- a/app/views/base/plan_form.html
+++ b/app/views/base/plan_form.html
@@ -1,11 +1,22 @@
-<form>
-    <div class="form-group">
-        <label for="inpTitle">Title</label>
-        <input type="text" class="form-control" id="inpTitle" placeholder="Enter title" value="{{ plan.Title}}">
+<form class="plan-form">
+    <fieldset title="Step 1" class="stepy-step">
+        <legend class="stepy-legend">Set plan title</legend>
+        <input type="text" class="form-control" id="inpTitle" placeholder="Enter title" value="{{ plan.Title }}">
+    </fieldset>
+
+    <fieldset title="Step 2" class="stepy-step">
+        <legend class="stepy-legend">Set plan users</legend>
+        <div class="list-group">
+        </div>
+    </fieldset>
+
+    <fieldset title="Step 3" class="stepy-step">
+        <legend class="stepy-legend">Configure plan days</legend>
+        3
+    </fieldset>
+    <div class="btn-group" role="group" aria-label="Basic example">
+        <a class="stepy-back btn btn-md btn-warning">back</a>
+        <a class="stepy-next btn btn-md btn-warning">next</a>
     </div>
-    <div class="form-group">
-        <label for="inpOwner">Owner</label>
-        <input type="text" class="form-control" id="inpOwner">
-    </div>
-    <button type="button" class="btn btn-primary">Save</button>
+    <button class="stepy-finish btn btn-lg btn-info">Save</button>
 </form>
