--- a/app/views/front/plans.html
+++ b/app/views/front/plans.html
@@ -2,51 +2,48 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-lg-6 text-center">
+    <div class="col-lg-12 text-center">
         <h1 class="mt-5">Plans</h1>
     </div>
-    <div class="col-lg-6 text-center">
-        <h1 class="mt-5">
-            <button class="btn btn-info btn-lg create-user"
-                    data-toggle="collapse"
-                    data-target="#multi-collapse-"
-                    role="button">Create Plan <i class="fas fa-plus-circle"></i></button>
-        </h1>
-    </div>
 </div>
-<br/>
 <div class="row">
     <div class="col-lg-12 text-center">
-        <table class="table">
-            <thead>
-            <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Title</th>
-                <th scope="col">Action</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for plan in plans %}
-            <tr>
-                <th scope="row">{{ plan.Id }}</th>
-                <td>{{ plan.Title }}</td>
-                <td>
-                    <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-                        <button class="btn btn-info btn-lg edit-user"
-                                data-toggle="collapse"
-                                data-target="#multi-collapse-{{ user.Id }}"
-                                role="button">
-                            <i class="fas fa-edit"></i>
-                        </button>
-                        <button class="btn btn-danger btn-lg delete-user" data-id="{{ user.Id }}">
-                            <i class="fas fa-times-circle"></i>
-                        </button>
-                    </div>
-                </td>
-            </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">New Plan</h5>
+                <a href="/plan_create" class="btn btn-lg btn-info">Create <i class="fas fa-plus-circle"></i></a>
+            </div>
+        </div>
+        {% for plan in plans %}
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">{{ plan.Title }}</h5>
+                <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+                    <a href="/plans/{{ plan.Id }}" class="btn btn-lg btn-info"><i class="fas fa-edit"></i></a>
+                    <a href="#" class="btn btn-lg btn-danger remove-plan" data-id="{{ plan.Id }}"><i class="fas fa-times-circle"></i></a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
     </div>
 </div>
+{% endblock %}
+
+{% block footer %}
+<script>
+    $(document).ready(function() {
+        $('.remove-plan').on('click', function(e) {
+            e.preventDefault();
+            var root = $(this);
+            var planId = $(this).attr('data-id');
+
+             $.ajax({
+                 method: "delete",
+                 url: "/api/v1/plans/" + planId,
+             }).done(function () {
+                root.parents('.card').html("");
+            });
+        });
+    });
+</script>
 {% endblock %}
